[BGPT] Update animations in subframes

In blink-gen-property-trees mode we were only calling update
animations on the top level document, so animation content in
subframes (like iframes) was not being processed.

This adds a simpler reproduction case to point at this behavior too.

R: pdr@chromium.org
Bug: 855688
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ic4707bda5fa67cd5bfd2894040d71ef34d5b0c2c
Reviewed-on: https://chromium-review.googlesource.com/1195887
Commit-Queue: Peter Mayo <petermayo@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587559}
Former-commit-id: 22c7c1f9f14749cda30b19f3fe1ae08903885b22