third_party/blink/renderer/core/animation/document_animations.cc
@@ -70,7 +70,7 @@ void DocumentAnimations::UpdateAnimationTimingIfNeeded(Document& document) {
 void DocumentAnimations::UpdateAnimations(
     Document& document,
     DocumentLifecycle::LifecycleState required_lifecycle_state,
-    base::Optional<CompositorElementIdSet>& composited_element_ids) {
+    const base::Optional<CompositorElementIdSet>& composited_element_ids) {
   DCHECK(document.Lifecycle().GetState() >= required_lifecycle_state);
 
   if (document.GetPendingAnimations().Update(composited_element_ids)) {
